# OcamlAircraftCalculate

./: README.md
OcamlTestProj/: .merlin  AsyncTestData.txt  angle.mli  counter.ml  dune  json_handler.ml  server.ml
OcamlTestProj/_build/: .db  .digest-db  log
OcamlTestProj/_build/default/: angle.cmxa  deter.cmxa  deter.ml  json_handler.cmxa  json_handler.ml  server.ml
OcamlTestProj/_build/default/.angle.objs/byte/: angle.cmti
OcamlTestProj/_build/default/.deter.objs/byte/: deter.cmo  deter.cmt
OcamlTestProj/_build/default/.deter.objs/native/: deter.cmx
OcamlTestProj/_build/default/.js/base/: base.cma.js
OcamlTestProj/_build/default/.js/bin_prot.shape/: bin_shape_lib.cma.js
OcamlTestProj/_build/default/.js/core/: core.cma.js
OcamlTestProj/_build/default/.js/core_kernel/: core_kernel.cma.js
OcamlTestProj/_build/default/.js/core_kernel.caml_unix/: caml_unix.cma.js
OcamlTestProj/_build/default/.js/parsexp/: parsexp.cma.js
OcamlTestProj/_build/default/.js/sexplib/: sexplib.cma.js
OcamlTestProj/_build/default/.merlin-conf/: exe-server  lib-json_handler
workplace/: a.out  angle.ml  angle.mli  base_calculate.mli  dune  matrix.ml  matrix.mli  quaternion.ml  quaternion.mli  test.ml
workplace/_build/: .db  .digest-db  _digests  _log  check_matrixReb.inferred.mli  check_matrixReb.ml  check_matrixReb.ml.depends  log  ocamlc.where
workplace/_build/default/: angle.cmxa  angle.ml  base_calculate.cmxa  matrix.cmxa  quaternion.cmxa  quaternion.ml  quaternion.mli  test.ml
workplace/_build/default/.merlin-conf/: exe-test  lib-base_calculate  lib-quaternion
(+109 files in other folders)
