;; This declares the hello_world executable implemented by hello_world.ml

(library
 (name angle)
 (modules angle)
 (libraries owl)
 )
(library
 (name matrix)
 (modules matrix)
 (libraries owl angle)
 )

(library
 (name deter)
 (modules deter)
 )
(library
 (name json_handler)
 (modules json_handler)
 (libraries yojson matrix)
 )



(executable
 (name server)
 (modules server)
 (libraries json_handler deter lwt cohttp-lwt-unix cohttp yojson)
 )