(library
 (name angle)
 (modules angle)
 (libraries owl)
 )
(library
 (name matrix)
 (modules matrix)
 (libraries owl angle)
 )

(library
 (name base_calculate)
 (modules base_calculate)
 (libraries owl)
 )

(library
 (name quaternion)
 (modules quaternion)
 (libraries owl angle matrix)
 )

(executable
 (name test)
 (modules test)
 (libraries owl angle matrix base_calculate quaternion)
 )